frontend/test/should_pass/exectype_AssignVarToVarUntyped.grg
using exectype;

rule r
{
	modify  {
		exec(u=v);
	}
}