frontend/test/should_fail/exec_020.grg
using deep_model_001;

rule r(y : Bcc) : (B) {
  modify{
    exec(c:B=y & (c)=r(c)   & (c:B)=r(c));
    return (y);
  }
}
